# 2DRBI-MC

./: .gitignore  2DRBI.cpp  2DRBI.hpp  2DRBI_MC.cpp  2DRBI_PT.cpp  CMakeLists.txt  Documentation.txt  RBI_template.ini  README.md  Usermanual.md  datacollect.py  exp_beta.hpp  genconfigs.py  genconfigs_MC.py  gensims.py  main.cpp  main_MC.cpp  main_PT.cpp  measurement.hpp  plot.py  square_rotated.hpp  subbatch_template  subclusterjobs.sub  subfile_template  subjobs_MC.sub  submit_jobs.py
2DRBI-MC_loss/: 2DRBI.cpp  2DRBI.hpp  genconfigs.py  main.cpp  subclusterjobs.sub
build_new/: 2DRBI  CMakeCache.txt  Makefile  cmake_install.cmake
data/: d=3_p=0.0_beta=0.25_bc=even_seed=0.pkl  d=3_p=0.0_beta=0.25_bc=odd_seed=0.pkl  d=3_p=0.1_beta=1.0_bc=even_seed=0.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=0.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=1.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=10.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=11.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=12.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=13.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=14.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=15.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=16.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=17.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=18.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=19.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=2.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=20.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=21.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=22.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=23.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=24.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=25.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=26.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=27.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=28.pkl  d=3_p=0.1_beta=2.197224577336219_bc=even_seed=29.pkl  (+3645 more)
(+53 files in other folders)
